--- a/docs/layouts/partials/contractRow.html
+++ b/docs/layouts/partials/contractRow.html
@@ -1,7 +1,7 @@
 <tr>
   <td>
     <a
-      href="https://github.com/boomcrypto/clarity-deployed-contracts/blob/main/contracts/{{ .address }}/{{ .name }}.clar"
+      href="{{ .Site.Params.geekdocsRepo}}/blob/main/contracts/{{ .address }}/{{ .name }}.clar"
     >
       {{ .address }}.{{ .name }}</a
     >
