fix contract links, add ft page

--- a/docs/layouts/partials/contractRow.html
+++ b/docs/layouts/partials/contractRow.html
@@ -1,7 +1,7 @@
 <tr>
   <td>
     <a
-      href="{{ .Site.Params.geekdocsRepo}}/blob/main/contracts/{{ .address }}/{{ .name }}.clar"
+      href="{{ site.Params.geekdocrepo}}/blob/main/contracts/{{ .address }}/{{ .name }}.clar"
     >
       {{ .address }}.{{ .name }}</a
     >
