add link to VS Code Web editor

--- a/docs/layouts/shortcodes/contractref.html
+++ b/docs/layouts/shortcodes/contractref.html
@@ -1,1 +1,1 @@
-<a href="{{ .Page.Site.Params.geekdocRepo }}/blob/main/contracts/{{ .Get 1 }}/{{ .Get 2 }}.clar" title="{{ .Get 1 }}.{{ .Get 2 }}">{{ .Get 0 }}</a>
+<span><a href="{{ .Page.Site.Params.geekdocRepo }}/blob/main/contracts/{{ .Get 1 }}/{{ .Get 2 }}.clar" title="{{ .Get 1 }}.{{ .Get 2 }}">{{ .Get 0 }}</a>&nbsp;<a href="https://explorer.stackscode.co/txid/{{ .Get 1}}.{{ .Get 2}}?chain=mainnet">&#9998;</a></span>
